--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "gulp-watch": "^4.3.11",
     "imagemin-pngquant": "^5.0.1",
     "rangeslider.js": "^2.3.2"
+  },
+  "dependencies": {
+    "jquery-pixel-perfect": "^1.0.0"
   }
 }
